# DSPy-Resoner

./: .gitignore  README.md  pyproject.toml
app/: logger_config.py  main.py  main_react.py  main_rlm.py
app/adapters/: base.py  tiny_benchmark.py
app/api/routes/: benchmark.py  chat.py  tools.py
app/api/routes/agents/: __init__.py  _helpers.py  react.py  rlm.py
app/benchmarks/: __init__.py  scenarios.json
app/benchmarks/results/: 192b2d42aad0.json
app/core/: config.py  openrouter_client.py
app/evaluators/: __init__.py  tiny_eval.py
app/schemas/: benchmarks.py  openai.py
app/services/: llm_service.py  scenario_loader.py  tool_executor.py
app/test/: dspy_requests.http  requests.http  rlm_requests.http  test_api.py  test_e2e.py  v1_tools_requests.http
app/tools/: code_tool.py  email_tool.py  registry.py  search_tool.py  weather_tool.py
app/utils/: sse.py
benchmarks/: README.md  run_bfcl.sh  run_livemcpbench.sh  run_tau1.sh  run_tau2.sh  run_toolathlon.sh
