[project]
name = "openrouter-proxy"
version = "0.1.0"
description = "OpenRouter Tool Agent Proxy"
requires-python = ">=3.13"
dependencies = [
    "ddgs>=9.14.2",
    "dspy>=3.2.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "litellm>=1.55.0",
    "openai>=2.33.0",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "requests>=2.31.0",
    "uvicorn>=0.46.0",
]
